# zxczxczxc-assistant

./: .gitignore  README.md  index.html  package-lock.json  package.json  run-dev.bat  setup.bat  setup.sh  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.pkg-shims/: javascriptcoregtk-4.0.pc  webkit2gtk-4.0.pc  webkit2gtk-web-extension-4.0.pc
src-tauri/src/: ai_bridge.rs  clipboard.rs  image_gen.rs  local_sd.rs  main.rs  overlay.rs  project_indexer.rs  screen_capture.rs  web_search.rs
src/components/: ApiKeyInput.tsx  AssistantPanel.tsx  CharacterImport.tsx  ChatHistory.tsx  FileEditBlock.tsx  FileIndexer.tsx  FileTree.tsx  ImageGallery.tsx  ImageGenSettings.tsx  LocalSdPanel.tsx  MarkdownRenderer.tsx  PromptLibrary.tsx  ScreenshotPreview.tsx  StFormatText.tsx  WebSearchToggle.tsx
src/hooks/: useTauriEvents.ts
src/store/: assistantStore.ts
src/utils/: dialog.ts
tests-standalone/: Cargo.toml
tests-standalone/src/: ai_bridge.rs  main.rs  project_indexer.rs
