[package]
name    = "ai-assistant-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.11", features = ["json"] }
base64      = "0.21"
anyhow      = "1"
log         = "0.4"
walkdir     = "2"

[dev-dependencies]
tempfile = "3"
